[package]
name = "svt-av1-sys"
version = "0.1.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to SVT-AV1"
repository = "https://github.com/rust-av/svt-av1-rs"
edition = "2018"
build = "build.rs"
readme = "../README.md"

[package.metadata.system-deps]
SvtAv1Enc = "0.8"

[features]
build_sources = []

[build-dependencies]
bindgen = "0.53.1"
system-deps = "1.3"

[dependencies]
